# MTStar-Online

./: .gitmodules  README.md
drdo_simulation/anomaly_control/: CMakeLists.txt
drdo_simulation/anomaly_control/include/anomaly_control/: anomaly_control.hpp
drdo_simulation/anomaly_control/params/: costmap.yaml  waypoints.yaml
drdo_simulation/anomaly_control/src/: anomaly_control_node.cpp
drdo_simulation/drdo_simulation/launch/: costmap.launch  mav.launch  move_base_ugv.launch  rviz.launch  sim.launch
drdo_simulation/fake_battery/: CMakeLists.txt
drdo_simulation/fake_battery/include/fake_battery/: fake_battery.hpp
drdo_simulation/fake_battery/src/: fake_battery.cpp
drdo_simulation/mav_move_base/: package.xml
drdo_simulation/mav_move_base/include/mav_move_base/: mav_move_base.hpp
drdo_simulation/mav_move_base/src/: mav_move_base.cpp
ltl_rm/: CMakeLists.txt
ltl_rm/include/ltl_rm/: MT_star.cpp  a.out  disjointset.hpp  manager.hpp  querygroup.hpp  rm.hpp  run.cpp
ltl_rm/src/: manager.cpp  manager_node.cpp  manager_querygroup.cpp  manager_querygroup_node.cpp  quad.cpp  rm.cpp
mrrp/launch/: mrrp.launch
mrrp/src/: mrrp.cpp  mrrp_node.cpp
mrrtpe/ltl_rm/: package.xml
mrrtpe/ltl_rm/include/: transform.cpp
mrrtpe/ltl_rm/include/ltl_rm/: MTplanner_variables.h  main  main.cpp  manager_querygroup.hpp  run
mrrtpe/ltl_rm/launch/: rm.launch
mrrtpe/ltl_rm/src/: quad_statem.cpp  rm_node.cpp
mrrtpe/mrrp/: CMakeLists.txt  package.xml
mrrtpe/mrrp/include/mrrp/: mrrp.hpp
mrrtpe/mrrp/launch/: mrrp2.launch
mrrtpe/mrrp/params/: mrrp.yaml  mrrp_costmap.yaml
mrrtpe/mrrtpe_msgs/: CMakeLists.txt
mrrtpe/obstacle_extractor/: CMakeLists.txt
mrrtpe/obstacle_extractor/include/obstacle_extractor/: marker_publisher.hpp
mrrtpe/obstacle_extractor/src/: obstacle_extractor_node.cpp
mrrtpe/state_machine/ugv_state_machine/: package.xml
mrrtpe/state_machine/ugv_state_machine/include/ugv_state_machine/: ugv_state_machine.hpp
mrrtpe/state_machine/ugv_state_machine/include/ugv_state_machine/behaviours/: startup.hpp
mrrtpe/state_machine/ugv_state_machine/include/ugv_state_machine/ugv_state/: move_base.hpp
mrrtpe/state_machine/ugv_state_machine/launch/: debug.launch  test.py
mrrtpe/state_machine/ugv_state_machine/params/: debug.yaml
mrrtpe/state_machine/ugv_state_machine/src/: ugv_state_machine_base.cpp
mrrtpe/state_machine/ugv_state_machine/src/behaviours/: goal_reached.cpp  reach_idle.cpp  startup.cpp
mrrtpe/state_machine/ugv_state_machine/src/ugv_state/: ugv_state.cpp
mrrtpe_msgs/: package.xml
mrrtpe_msgs/msg/: BatteryStatus.msg  Path.msg  Plan.msg  RobotStatus.msg  State.msg  VehicleType.msg
mrrtpe_simulation/: .gitmodules
mrrtpe_simulation/drdo_simulation/anomaly_control/: package.xml
mrrtpe_simulation/drdo_simulation/anomaly_control/include/anomaly_control/: intract_marker.hpp  object_control.hpp
mrrtpe_simulation/drdo_simulation/anomaly_control/launch/: anomaly_control.launch
mrrtpe_simulation/drdo_simulation/anomaly_control/params/: anomaly_control.yaml
mrrtpe_simulation/drdo_simulation/anomaly_control/src/: anomaly_control.cpp  object_control.cpp
mrrtpe_simulation/drdo_simulation/drdo_simulation/: CMakeLists.txt  package.xml
mrrtpe_simulation/drdo_simulation/drdo_simulation/launch/: cost.launch  map_server.launch  mavs.launch  robot4.launch  ugv.launch  ugvs.launch
mrrtpe_simulation/drdo_simulation/drdo_simulation/maps/: 20x20.pgm  use_case_2.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/husky/: control.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/: base_local_planner_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/teb_local_planner/common/: teb_local_planner_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/teb_local_planner/ugv_1/odom_nav_params/: local_costmap_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/teb_local_planner/ugv_2/: costmap_common_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/teb_local_planner/ugv_2/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/move_base/teb_local_planner/ugv_3/: costmap_common_params.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/state_machine/mav_4/: state_machine.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/params/state_machine/ugv_1/: state_machine.yaml
mrrtpe_simulation/drdo_simulation/drdo_simulation/worlds/: 20x20.world  20x20_2.world  use_case1.world  use_case2.world  use_case2_2.world  use_case2_3.world  ws_0.world  ws_01.world  ws_10x10_ahmad.world  ws_2.world
mrrtpe_simulation/drdo_simulation/fake_battery/: package.xml
mrrtpe_simulation/drdo_simulation/fake_battery/launch/: battery.launch
mrrtpe_simulation/drdo_simulation/fake_battery/src/: fake_battery_node.cpp
mrrtpe_simulation/drdo_simulation/mav_move_base/: CMakeLists.txt
mrrtpe_simulation/drdo_simulation/mav_move_base/launch/: move_base.launch
mrrtpe_simulation/drdo_simulation/mav_move_base/src/: mav_move_base_node.cpp
mrrtpe_utils/: CMakeLists.txt  package.xml
mrrtpe_utils/include/mrrtpe_utils/: conversions.hpp
obstacle_extractor/: package.xml
obstacle_extractor/include/obstacle_extractor/: obstacle_extractor.hpp
obstacle_extractor/launch/: obstacle_extractor.launch
obstacle_extractor/src/: obstacle_extractor.cpp
state_machine/ugv_state_machine/: CMakeLists.txt
state_machine/ugv_state_machine/include/ugv_state_machine/: ugv_state_machine_base.hpp
state_machine/ugv_state_machine/include/ugv_state_machine/behaviours/: follow_anomaly.hpp  goal_reached.hpp  reach_goal.hpp  reach_idle.hpp
state_machine/ugv_state_machine/include/ugv_state_machine/ugv_state/: ugv_state.hpp
state_machine/ugv_state_machine/src/: ugv_state_machine.cpp  ugv_state_machine_node.cpp
state_machine/ugv_state_machine/src/behaviours/: follow_anomaly.cpp  reach_goal.cpp
state_machine/ugv_state_machine/src/ugv_state/: move_base.cpp
(+33 files in other folders)
