<package format="2">
    <name>ltl_rm</name>
    <version>0.0.0</version>
    <description> ltl_rm </description>

    <maintainer email="rohit4myself@hotmail.com">Rohit Singh</maintainer>

    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend> 
    <buildtool_depend>mavros_msgs</buildtool_depend>
    <depend>mrrtpe_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>roscpp</depend>
</package>