<?xml version="1.0"?>
<package format="2">
    <name>ugv_state_machine</name>
    <version>0.0.0</version>
    <description>The ugv_state_machine package</description>

    <maintainer email="gajendra@example.com">Gajendra Nagar</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>mrrtpe_msgs</depend>
    <depend>mrrtpe_utils</depend>
    <depend>actionlib</depend>
    <depend>state_machine_definition</depend>

</package>
