<package format="2">
    <name>fake_battery</name>
    <version>2.2.3</version>
    <description>fake_battery.</description>

    <maintainer email="example@example.com">Gajendra Nagar</maintainer>
    <maintainer email="example@example.com">Rohit</maintainer>

    <license>none</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <depend> roscpp </depend>
    <depend> nav_msgs </depend>
    <depend> sensor_msgs </depend>
</package>
